logs/build_log_13.txt
cargo :    Compiling tracea v0.1.0 (E:\Projects\Tracea)
発生場所 行:1 文字:1
+ cargo build --lib --release 2>&1 | Out-File build_log
_13.txt -Encodin ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compil 
   ing tr...rojects\Tracea):String) [], RemoteExcepti  
  on
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused imports: `PyRefMut` and `PyRef`
 --> src\interface\python.rs:6:12
  |
6 | use pyo3::{PyRef, PyRefMut};
  |            ^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(un
used)]`) on by default

warning: unused import: `cudarc::nvrtc::Ptx`
 --> src\interface\python.rs:9:5
  |
9 | use cudarc::nvrtc::Ptx;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashSet`
 --> src\semantic\mapping.rs:1:5
  |
1 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0061]: this function takes 1 argument but 2 argu
ments were supplied
  --> src\emitter\jit.rs:9:15
   |
 9 |         match compile_ptx(source, &opts) {
   |               ^^^^^^^^^^^         ----- unexpected
 argument #2 of type `&Vec<&str>`
   |
note: function defined here
  --> C:\Users\kouno\.cargo\registry\src\index.crates.i
o-1949cf8c6b5b557f\cudarc-0.12.1\src\nvrtc\safe.rs:71:8
   |
71 | pub fn compile_ptx<S: AsRef<str>>(src: S) -> Resul
t<Ptx, CompileError> {
   |        ^^^^^^^^^^^
help: remove the extra argument
   |
 9 -         match compile_ptx(source, &opts) {
 9 +         match compile_ptx(source) {
   |

warning: unused variable: `slf`
   --> src\interface\python.rs:137:22
    |
137 |     pub fn profiling(slf: &Bound<'_, Self>) -> Py
Result<PyProfilingScope> {
    |                      ^^^ help: if this is intenti
onal, prefix it with an underscore: `_slf`
    |
    = note: `#[warn(unused_variables)]` (part of `#[war
n(unused)]`) on by default

warning: unused variable: `m`
   --> src\interface\python.rs:249:5
    |
249 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it wit
h an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:249:13
    |
249 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefi
x it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:249:21
    |
249 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentiona
l, prefix it with an underscore: `_k`

warning: unused variable: `epilogue`
   --> src\interface\python.rs:250:5
    |
250 |     epilogue: PyEpilogueOp,
    |     ^^^^^^^^ help: if this is intentional, prefix
 it with an underscore: `_epilogue`

warning: unused variable: `device`
   --> src\interface\python.rs:251:5
    |
251 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix i
t with an underscore: `_device`

warning: unused variable: `m`
   --> src\interface\python.rs:264:5
    |
264 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it wit
h an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:264:13
    |
264 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefi
x it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:264:21
    |
264 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentiona
l, prefix it with an underscore: `_k`

warning: unused variable: `device`
   --> src\interface\python.rs:265:5
    |
265 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix i
t with an underscore: `_device`

warning: unused variable: `device`
  --> src\interface\cpp.rs:12:9
   |
12 |     let device = c_str.to_str().unwrap_or("A100").
to_string();
   |         ^^^^^^ help: if this is intentional, prefi
x it with an underscore: `_device`

warning: unused variable: `row`
  --> src\semantic\mapping.rs:20:28
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> 
String {
   |                            ^^^ help: if this is in
tentional, prefix it with an underscore: `_row`

warning: unused variable: `col`
  --> src\semantic\mapping.rs:20:38
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> 
String {
   |                                      ^^^ help: if 
this is intentional, prefix it with an underscore: `_co
l`

For more information about this error, try `rustc --exp
lain E0061`.
warning: `tracea` (lib) generated 16 warnings
error: could not compile `tracea` (lib) due to 1 previo
us error; 16 warnings emitted
